增加读写文件；完成图像，热成像，Dula的参数c从文件读写
将参数写入文件为防止掉电丢数据

--- a/OnvifServer/Makefile
+++ b/OnvifServer/Makefile
@@ -49,6 +49,7 @@ OBJS = bm/word_analyse.o bm/util.o bm/sys_os.o bm/sys_log.o bm/sys_buf.o bm/ppst
 	  ../camCtl/pelco_ptz/ptz.o \
 	   ../camCtl/visca/libvisca.o ../camCtl/visca/libvisca_posix.o ../camCtl/visca/rw_config.o ../camCtl/visca/visca_api.o \
 	   ../camCtl/set_config.o \
+	   ../camCtl/cfg_file.o \
 	   main.o
 
 OUTPUT = onvifserver
